# FaceRecognition

./: CMakeLists.txt  main.cpp  myfacerecognition.cpp  myfacerecognition.h
